Fix mobile overflow on svg

--- a/media/css/firefox/family/components/_agreement.scss
+++ b/media/css/firefox/family/components/_agreement.scss
@@ -15,6 +15,8 @@
 
     svg {
         display: block;
+        max-width: 100%;
+        height: auto;
     }
 
     .c-module-tag {
